# src/docs/swagger.json
@@ -7,7 +7,7 @@
   },
   "servers": [
     {
-      "url": "https://adapler-api.inidito.my.id",
+      "url": "http://192.168.20.32:2051",
       "description": "Development Server"
     }
   ],
@@ -23,6 +23,9 @@
     },
     {
       "name": "Profiles"
+    },
+    {
+      "name": "Task"
     }
   ],
   "paths": {
@@ -276,6 +279,140 @@
         "security": [{ "bearerAuth": [] }],
         "responses": {
           "200": { "description": "Ok." }
+        }
+      }
+    },
+    "/task": {
+      "post": {
+        "tags": ["Task"],
+        "summary": "Add task",
+        "security": [{ "bearerAuth": [] }],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "task_name": { "type": "string" },
+                  "deadline_date": { "type": "string", "format": "date" },
+                  "deadline_time": {
+                    "type": "string",
+                    "format": "time",
+                    "pattern": "^([0-1]?[0-9]|2[0-3]):[0-5][0-9]$",
+                    "example": "08:00"
+                  },
+                  "prioritas": {
+                    "type": "string",
+                    "enum": ["tinggi", "sedang", "rendah"]
+                  },
+                  "status": {
+                    "type": "string",
+                    "enum": ["selesai", "belum_selesai"]
+                  }
+                },
+                "required": [
+                  "task_name",
+                  "deadline_date",
+                  "deadline_time",
+                  "prioritas",
+                  "status"
+                ]
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": { "description": "Add task successful." }
+        }
+      }
+    },
+    "/task/finish": {
+      "get": {
+        "tags": ["Task"],
+        "summary": "Get all completed tasks by user ID",
+        "security": [{ "bearerAuth": [] }],
+        "responses": {
+          "200": { "description": "Ok." }
+        }
+      }
+    },
+    "/task/not-finish": {
+      "get": {
+        "tags": ["Task"],
+        "summary": "Get all unfinished tasks by user ID",
+        "security": [{ "bearerAuth": [] }],
+        "responses": {
+          "200": { "description": "Ok." }
+        }
+      }
+    },
+    "/task/{id}": {
+      "put": {
+        "tags": ["Task"],
+        "summary": "Update task",
+        "security": [{ "bearerAuth": [] }],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": { "type": "string" }
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "task_name": { "type": "string" },
+                  "deadline_date": { "type": "string", "format": "date" },
+                  "deadline_time": {
+                    "type": "string",
+                    "format": "time",
+                    "pattern": "^([0-1]?[0-9]|2[0-3]):[0-5][0-9]$",
+                    "example": "08:00"
+                  },
+                  "prioritas": {
+                    "type": "string",
+                    "enum": ["tinggi", "sedang", "rendah"]
+                  },
+                  "status": {
+                    "type": "string",
+                    "enum": ["selesai", "belum_selesai"]
+                  }
+                },
+                "required": [
+                  "task_name",
+                  "deadline_date",
+                  "deadline_time",
+                  "prioritas",
+                  "status"
+                ]
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": { "description": "Task updated successfully." }
+        }
+      },
+      "delete": {
+        "tags": ["Task"],
+        "summary": "Delete task by ID",
+        "security": [{ "bearerAuth": [] }],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": { "type": "string" }
+          }
+        ],
+        "responses": {
+          "200": { "description": "Task deletion successful." }
         }
       }
     }
